# 18-OnlineCoM

./: .gitignore  CMakeLists.txt  README.md  comp_phi_matrix.cpp
betaConvergence/: bestBetaVector.txt  betaVectors1initialBetahardware104Posesdart.txt  betaVectors1initialBetahardware130Posesdart.txt  betaVectors1initialBetahardwareAll236Vectors.txt
krang_recover_beta/: CMakeLists.txt  algo.txt  defaultInit.txt  recoverBeta.cpp
misc/: things_i_did_on_krang.txt
misc/krang_internet/: things_i_did_on_krang.txt
poseDatasets/: filteredPosesrandom22106fullbalance0.00100tolsafe  finalSetMunzir.txt
simulatePoses/: CMakeLists.txt  sim_poses.cpp
